--- a/zagotovka.ipynb
+++ b/zagotovka.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,9 @@
     "    welcome_text = \"\"\"\n",
     "    Привет! Я умею рассказывать стихи, знаю много интересных фактов и могу показать милых котиков!\n",
     "    \"\"\"\n",
+    "    keyboard=telebot.types.ReplyKeyboardMarkup(row_width=2,resize_keyboard=False,one_time_keyboard=False)\n",
+    "    button1=telebot.types.KeyboardButton(\"Факт\")\n",
+    "    button2=telebot.types.KeyboardButton(\"Стихотворение\")\n",
     "    bot.send_message(message.chat.id,  welcome_text)\n",
     "\n",
     "@bot.message_handler(commands=['poem'])\n",
@@ -47,6 +50,12 @@
     "    mus = open(\"happy.mp3\", 'rb')\n",
     "    bot.send_(message.chat.id, mus)\n",
     "\n",
+    "@bot.message_handler(content_types=[\"text\"])\n",
+    "def answear(message):\n",
+    "    if message.text.strip() == \"Факт\":\n",
+    "        send_fact(message)\n",
+    "    elif message.text.strip() == \"Стихотворение\":\n",
+    "        send_poem(message)\n",
     "\n",
     "bot.polling()\n"
    ]
