--- a/zagotovka.ipynb
+++ b/zagotovka.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +23,19 @@
     "    keyboard=telebot.types.ReplyKeyboardMarkup(row_width=2,resize_keyboard=False,one_time_keyboard=False)\n",
     "    button1=telebot.types.KeyboardButton(\"Факт\")\n",
     "    button2=telebot.types.KeyboardButton(\"Стихотворение\")\n",
-    "    bot.send_message(message.chat.id,  welcome_text)\n",
+    "    button3=telebot.types.KeyboardButton(\"Котики\")\n",
+    "    button4=telebot.types.KeyboardButton(\"Стикер\")\n",
+    "    keyboard.add(button1,button2,button3,button4)\n",
+    "    bot.send_message(message.chat.id,  welcome_text,reply_markup=keyboard)\n",
     "\n",
     "@bot.message_handler(commands=['poem'])\n",
     "def send_poem(message):\n",
     "    poem_text = \"Муха села на варенье, вот и все стихотворенье...\"\n",
     "    bot.send_message(message.chat.id, poem_text)\n",
+    "    keyboard = telebot.types.InlineKeyboardMarkup(row_width=1)\n",
+    "    button_url=telebot.types.InlineKeyboardButton(\"Перейти\",url=\"https://stihi.ru\")\n",
+    "    keyboard.add(button_url)\n",
+    "    bot.send_message(message.chat.id,\"Больше стихов\",reply_markup=keyboard)\n",
     "\n",
     "@bot.message_handler(commands=['fact'])\n",
     "def send_fact(message):\n",
@@ -45,10 +52,12 @@
     "    bot.send_photo(message.chat.id, cat_img)\n",
     "\n",
     "@bot.message_handler(commands=['musik'])\n",
-    "def send_cat(message):\n",
-    "\n",
+    "def send_mus(message):\n",
     "    mus = open(\"happy.mp3\", 'rb')\n",
     "    bot.send_(message.chat.id, mus)\n",
+    "@bot.message_handler(commands=['sticker'])\n",
+    "def send_sticker(message):\n",
+    "    bot.send_sticker(message.chat.id,\"CAACAgIAAxkBAAEGyAFjlcn6NwXCN0gfFcJfQ-iv-usiUAAC1CIAAvhtsEgTy0IAAWSuHYgrBA\")\n",
     "\n",
     "@bot.message_handler(content_types=[\"text\"])\n",
     "def answear(message):\n",
@@ -56,7 +65,10 @@
     "        send_fact(message)\n",
     "    elif message.text.strip() == \"Стихотворение\":\n",
     "        send_poem(message)\n",
-    "\n",
+    "    elif message.text.strip() == \"Котики\":\n",
+    "        send_cat(message)\n",
+    "    elif message.text.strip() == \"Стикер\":\n",
+    "        send_sticker(message)\n",
     "bot.polling()\n"
    ]
   },
