--- a/new.ipynb
+++ b/new.ipynb
@@ -14,6 +14,140 @@
     "canvas = Canvas(window, width = 800, height = 600, bg = \"white\")\n",
     "canvas.pack()\n",
     "canvas.create_rectangle(10,10,110,110,fill=\"yellow\",outline=\"black\")\n",
+    "canvas.create_polygon(10,110,60,140,110,110,fill=\"red\",outline=\"black\")\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "\n",
+    "window = Tk()\n",
+    "window.geometry(\"800x600\")\n",
+    "\n",
+    "canvas = Canvas(window, width = 800, height = 600, bg = \"white\")\n",
+    "canvas.pack()\n",
+    "canvas.create_rectangle(20,20,40,40,fill=\"yellow\",outline=\"black\")\n",
+    "canvas.create_rectangle(50,50,90,90,fill=\"black\",outline=\"black\")\n",
+    "canvas.create_rectangle(100,100,160,160,fill=\"red\",outline=\"black\")\n",
+    "\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "\n",
+    "window = Tk()\n",
+    "window.geometry('800x600')\n",
+    "\n",
+    "canvas = Canvas(window,width=800,height=600,bg = 'white')\n",
+    "canvas.pack()\n",
+    "\n",
+    "canvas.create_rectangle(20,20,40,40,fill=\"yellow\",outline=\"black\")\n",
+    "canvas.create_rectangle(40,40,80,80,fill=\"red\",outline=\"black\")\n",
+    "canvas.create_rectangle(80,80,140,140,fill=\"blue\",outline=\"black\")\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "\n",
+    "window = Tk()\n",
+    "window.geometry(\"800x600\")\n",
+    "\n",
+    "canvas = Canvas(window, width=800, height=600,bg='white')\n",
+    "canvas.pack()\n",
+    "canvas.create_rectangle(20,20,120,120,fill='red', outline='black')\n",
+    "canvas.create_rectangle(220,220,320,320,fill='yellow', outline='black')\n",
+    "canvas.create_rectangle(220,220,120,120,fill='purple', outline='black')\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "\n",
+    "window = Tk()\n",
+    "window.geometry(\"800x600\")\n",
+    "canvas = Canvas(window, width=800, height=600, bg = 'white')\n",
+    "canvas.pack()\n",
+    "canvas.create_rectangle(10, 10, 30, 30, fill = 'yellow', outline = 'black')\n",
+    "canvas.create_rectangle(50, 50, 90, 90, fill = 'red', outline = 'black')\n",
+    "canvas.create_rectangle(110, 110, 170, 170, fill = 'green', outline = 'black')\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "\n",
+    "window = Tk()\n",
+    "window.geometry(\"800x600\")\n",
+    "canvas = Canvas(window, width=800, height=600, bg = 'white')\n",
+    "canvas.pack()\n",
+    "canvas.create_rectangle(10, 10, 30, 30, fill = 'yellow', outline = 'black')\n",
+    "canvas.create_rectangle(50, 50, 90, 90, fill = 'red', outline = 'black')\n",
+    "canvas.create_rectangle(110, 110, 170, 170, fill = 'green', outline = 'black')\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "window = Tk()\n",
+    "window.geometry(\"800x600\")\n",
+    "canvas = Canvas(window, width=800, height=600,bg='white')\n",
+    "canvas.pack()\n",
+    "canvas.create_rectangle(10,10,110,110,fill=\"yellow\",outline=\"black\")\n",
+    "canvas.create_rectangle(200,200,220,220,fill='brown',outline='black')\n",
+    "canvas.create_rectangle(300,300,340,340, fill='pink', outline='black')\n",
+    "canvas.create_rectangle(400,400,460,460, fill='green', outline='black')\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from tkinter import *\n",
+    "\n",
+    "window = Tk()\n",
+    "window.geometry(\"800x600\")\n",
+    "\n",
+    "canvas = Canvas(window, width = 800, height = 600, bg = \"white\")\n",
+    "canvas.pack()\n",
+    "canvas.create_rectangle(20,20,40,40,fill=\"yellow\",outline=\"black\")\n",
+    "canvas.create_rectangle(50,50,90,90,fill=\"black\",outline=\"black\")\n",
+    "canvas.create_rectangle(100,100,160,160,fill=\"red\",outline=\"black\")\n",
     "\n",
     "window.mainloop()"
    ]
