--- a/new.ipynb
+++ b/new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "canvas.pack()\n",
     "canvas.create_rectangle(10,10,110,110,fill=\"yellow\",outline=\"black\")\n",
     "canvas.create_polygon(10,110,60,140,110,110,fill=\"red\",outline=\"black\")\n",
+    "canvas.create_polygon(110,10,140,60,110,110,fill=\"red\",outline=\"black\")\n",
     "window.mainloop()"
    ]
   },
@@ -34,6 +35,47 @@
     "canvas.create_rectangle(20,20,40,40,fill=\"yellow\",outline=\"black\")\n",
     "canvas.create_rectangle(50,50,90,90,fill=\"black\",outline=\"black\")\n",
     "canvas.create_rectangle(100,100,160,160,fill=\"red\",outline=\"black\")\n",
+    "\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "\n",
+    "window = Tk()\n",
+    "window.geometry(\"800x600\")\n",
+    "\n",
+    "canvas = Canvas(window, width = 800, height = 600, bg = \"white\")\n",
+    "canvas.pack()\n",
+    "canvas.create_rectangle(20,20,40,40,fill=\"yellow\",outline=\"black\")\n",
+    "canvas.create_rectangle(50,50,90,90,fill=\"black\",outline=\"black\")\n",
+    "canvas.create_rectangle(100,100,160,160,fill=\"red\",outline=\"black\")\n",
+    "\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "\n",
+    "window = Tk()\n",
+    "window.geometry('800x600')\n",
+    "\n",
+    "canvas = Canvas(window, width=800, height=600, bg='white')\n",
+    "canvas.pack()\n",
+    "\n",
+    "canvas.create_rectangle(100,100,200,200, fill='pink',outline='black')\n",
+    "canvas.create_polygon(90,100,150,30,210,100,fill='red',outline='black')\n",
+    "canvas.create_rectangle(130,120,160,150,fill='blue',outline='black')\n",
     "\n",
     "window.mainloop()"
    ]
