--- a/new.ipynb
+++ b/new.ipynb
@@ -21,6 +21,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "House number: 12\n",
+      "Roof color: red\n",
+      "Wall color: green\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tkinter import *\n",
+    "\n",
+    "window = Tk()\n",
+    "window.geometry(\"800x600\")\n",
+    "\n",
+    "canvas = Canvas(window, width = 800, height = 600, bg = \"white\")\n",
+    "canvas.pack()\n",
+    "\n",
+    "class House:\n",
+    "    count=0\n",
+    "    def  __init__(self,roof_color,wall_color,number):\n",
+    "        self.number = number\n",
+    "        self.roof_color = roof_color\n",
+    "        self.wall_color = wall_color\n",
+    "        self.height = 130\n",
+    "        self.width = 140\n",
+    "        self.roof = None\n",
+    "        self.wall = None\n",
+    "    \n",
+    "    def build_house(self, x,y):\n",
+    "        House.count+=1\n",
+    "        h = self.height\n",
+    "        w = self.width\n",
+    "\n",
+    "        self.roof = canvas.create_polygon(x,y,x+w,y,x+w/2,y-w/2,fill=self.roof_color,outline=\"black\")\n",
+    "        self.wall = canvas.create_rectangle(x+20,y,x+120,y+100,fill=self.wall_color,outline=\"black\")\n",
+    "\n",
+    "    def print_info(self):\n",
+    "        print(f\"House number: {self.number}\")\n",
+    "        print(f\"Roof color: {self.roof_color}\")\n",
+    "        print(f\"Wall color: {self.wall_color}\")\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return(f\"House number: {self.number}\\nRoof color: {self.roof_color}\\nWall color: {self.wall_color}\")\n",
+    "\n",
+    "house_1=House(\"red\",\"green\",12)\n",
+    "house_1.build_house(20,50)\n",
+    "# house_1.print_info()\n",
+    "print(house_1)\n",
+    "# house_1.build_house(20,150)\n",
+    "# house_1.build_house(220,150)\n",
+    "# print(house_1.roof_color)\n",
+    "\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
@@ -76,6 +138,27 @@
     "canvas.create_rectangle(100,100,200,200, fill='pink',outline='black')\n",
     "canvas.create_polygon(90,100,150,30,210,100,fill='red',outline='black')\n",
     "canvas.create_rectangle(130,120,160,150,fill='blue',outline='black')\n",
+    "\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "\n",
+    "window = Tk()\n",
+    "window.geometry(\"800x600\")\n",
+    "\n",
+    "canvas = Canvas(window, width=800, height=600,bg='white')\n",
+    "canvas.pack()\n",
+    "canvas.create_rectangle(60,60,120,120,fill='red', outline=\"black\")\n",
+    "canvas.create_polygon(40,60,100,30,160,60,fill='yellow',outline='Black')\n",
+    "canvas.create_rectangle(100,100,90,90,fill=\"purple\", outline='black')\n",
+    "\n",
     "\n",
     "window.mainloop()"
    ]
