--- a/new.ipynb
+++ b/new.ipynb
@@ -21,16 +21,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2\n",
       "House number: 12\n",
       "Roof color: red\n",
-      "Wall color: green\n"
+      "Wall color: green\n",
+      " House number: 33\n",
+      "Roof color: lavender\n",
+      "Wall color: azure\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/pattycha/code2035/new.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 47>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pattycha/code2035/new.ipynb#X15sZmlsZQ%3D%3D?line=41'>42</a>\u001b[0m \u001b[39mprint\u001b[39m(house_1,house_2)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pattycha/code2035/new.ipynb#X15sZmlsZQ%3D%3D?line=42'>43</a>\u001b[0m \u001b[39m# house_1.build_house(20,150)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pattycha/code2035/new.ipynb#X15sZmlsZQ%3D%3D?line=43'>44</a>\u001b[0m \u001b[39m# house_1.build_house(220,150)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pattycha/code2035/new.ipynb#X15sZmlsZQ%3D%3D?line=44'>45</a>\u001b[0m \u001b[39m# print(house_1.roof_color)\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/pattycha/code2035/new.ipynb#X15sZmlsZQ%3D%3D?line=46'>47</a>\u001b[0m window\u001b[39m.\u001b[39;49mmainloop()\n",
+      "File \u001b[0;32m/Applications/Xcode.app/Contents/Developer/Library/Frameworks/Python3.framework/Versions/3.8/lib/python3.8/tkinter/__init__.py:1429\u001b[0m, in \u001b[0;36mMisc.mainloop\u001b[0;34m(self, n)\u001b[0m\n\u001b[1;32m   1427\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmainloop\u001b[39m(\u001b[39mself\u001b[39m, n\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m):\n\u001b[1;32m   1428\u001b[0m     \u001b[39m\"\"\"Call the mainloop of Tk.\"\"\"\u001b[39;00m\n\u001b[0;32m-> 1429\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtk\u001b[39m.\u001b[39;49mmainloop(n)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -68,17 +85,106 @@
     "        print(f\"Wall color: {self.wall_color}\")\n",
     "    \n",
     "    def __str__(self):\n",
-    "        return(f\"House number: {self.number}\\nRoof color: {self.roof_color}\\nWall color: {self.wall_color}\")\n",
+    "        return(f\"House number: {self.number}\\nRoof color: {self.roof_color}\\nWall color: {self.wall_color}\\n\")\n",
     "\n",
     "house_1=House(\"red\",\"green\",12)\n",
     "house_1.build_house(20,50)\n",
+    "house_2=House(\"lavender\",\"azure\",33)\n",
+    "house_2.build_house(180,50)\n",
+    "print(House.count)\n",
     "# house_1.print_info()\n",
-    "print(house_1)\n",
+    "print(house_1,house_2)\n",
     "# house_1.build_house(20,150)\n",
     "# house_1.build_house(220,150)\n",
     "# print(house_1.roof_color)\n",
     "\n",
     "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Воин2 атаковал Воин1\n",
+      "У Воин1 осталось здоровья 80\n",
+      "Воин1 атаковал Воин2\n",
+      "У Воин2 осталось здоровья 80\n",
+      "Воин1 атаковал Воин2\n",
+      "У Воин2 осталось здоровья 60\n",
+      "Воин2 атаковал Воин1\n",
+      "У Воин1 осталось здоровья 60\n",
+      "Воин2 атаковал Воин1\n",
+      "У Воин1 осталось здоровья 40\n",
+      "Воин2 атаковал Воин1\n",
+      "У Воин1 осталось здоровья 20\n",
+      "Воин1 атаковал Воин2\n",
+      "У Воин2 осталось здоровья 40\n",
+      "Воин1 атаковал Воин2\n",
+      "У Воин2 осталось здоровья 20\n",
+      "Воин1 атаковал Воин2\n",
+      "У Воин2 осталось здоровья 0\n",
+      "Воин1 победил!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "class Warrior:\n",
+    "    def __init__(self, name, health=100):\n",
+    "        self.name = name\n",
+    "        self.health = health\n",
+    "\n",
+    "    def hit(self, target):\n",
+    "        if type(self) == type(target):\n",
+    "            target.health -= 20\n",
+    "        else:\n",
+    "            raise TypeError\n",
+    "\n",
+    "warriors = [Warrior('Воин1'), Warrior('Воин2')]\n",
+    "while True:\n",
+    "    q = input('Введите 1, чтобы какой-то воин атаковал. Для закрытия программы введите 2: ')\n",
+    "    if q == '1':\n",
+    "        i = random.randint(0, 1)\n",
+    "        attacker, victim = warriors[i], warriors[i - 1]\n",
+    "        attacker.hit(victim)\n",
+    "        print(attacker.name, 'атаковал', victim.name)\n",
+    "        print('У', victim.name, 'осталось здоровья', victim.health)\n",
+    "        if victim.health <= 0:\n",
+    "            print(attacker.name, 'победил!!!')\n",
+    "            break\n",
+    "    elif q == '2':\n",
+    "        break\n",
+    "    else:\n",
+    "        print('Ошибка ввода')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 4 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class vector:\n",
+    "    def __init__(self,x,y):\n",
+    "        self.x=x\n",
+    "        self.y=y\n",
+    "    def dl(self):\n",
+    "        return (self.x*self.x+self.y*self.y)**(1/2)\n",
+    "a=vector(3,4)\n",
+    "print(a.x,a.y,a.dl())"
    ]
   },
   {
