--- a/game.ipynb
+++ b/game.ipynb
@@ -2,26 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tkinter import *\n",
     "from random import randint as rnd\n",
@@ -63,17 +46,37 @@
     "        self.photo = PhotoImage(file=\"img/dragon.gif\")\n",
     "\n",
     "knight = Knight() #создание рыцарей и драконов\n",
-    "dragon = []\n",
+    "dragons = []\n",
+    "current_dragon = 0\n",
     "for i in range(count): \n",
     "    dr=Dragon()\n",
-    "    dragon.append(dr)\n",
+    "    dragons.append(dr)\n",
     "\n",
     "def game():\n",
     "    canvas.delete(\"all\")\n",
     "    canvas.create_image(300,300, image = bg_photo)\n",
     "    canvas.create_image(knight.x,knight.y, image =knight.photo)\n",
     "    knight.y+=knight.v\n",
-    "    window.after(5,game)\n",
+    "    current_dragon = 0\n",
+    "    dragon_to_kill = -1\n",
+    "    for dragon in dragons:\n",
+    "        dragon.x-=dragon.v\n",
+    "        canvas.create_image(dragon.x,dragon.y, image =dragon.photo)\n",
+    "        if ((dragon.x-knight.x)**2+(dragon.y-knight.y)**2) <= 96**2:\n",
+    "            dragon_to_kill= current_dragon\n",
+    "        current_dragon+=1\n",
+    "        if dragon.x<=0:\n",
+    "            canvas.delete(\"all\")\n",
+    "            canvas.create_text(w//2,h//2,text=\"You lose!\",font=\"Verdana 42\",fill=\"red\")\n",
+    "            break\n",
+    "\n",
+    "    if dragon_to_kill>=0:\n",
+    "        del dragons[dragon_to_kill]\n",
+    "    if len(dragons) == 0:\n",
+    "            canvas.delete(\"all\")\n",
+    "            canvas.create_text(w//2,h//2,text=\"You WIN!!\",font=\"Verdana 42\",fill=\"red\")\n",
+    "    else:\n",
+    "        window.after(5,game)\n",
     "\n",
     "window.bind(\"<Key-Up>\",knight.up)\n",
     "window.bind(\"<Key-Down>\",knight.down)\n",
