--- a/game.ipynb
+++ b/game.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "\n",
     "w = 600 #ширина окна и поля\n",
     "h = 600 #высота\n",
-    "count = 3 # количество драконов\n",
+    "count = 1 # количество драконов\n",
     "\n",
     "window.geometry(f\"{w}x{h}\") #создание окна\n",
     "\n",
@@ -28,14 +28,24 @@
     "        self.x = 70\n",
     "        self.y = h//2\n",
     "        self.v = 0\n",
+    "        self.u = 0\n",
     "        self.photo = PhotoImage(file=\"img/knight.gif\")\n",
     "    \n",
     "    def up(self,event):\n",
-    "        self.v = -3\n",
+    "        if self.y>70:\n",
+    "            self.v = -3\n",
     "    def down(self,event):\n",
-    "        self.v = 3\n",
+    "        if self.y<h-70:\n",
+    "            self.v = 3\n",
+    "    def left(self,event):\n",
+    "        if self.x>70:\n",
+    "            self.u = -3\n",
+    "    def right(self,event):\n",
+    "        if self.x<w-70:\n",
+    "            self.u = 3\n",
     "    def stop(self,event):\n",
     "        self.v = 0\n",
+    "        self.u = 0\n",
     "\n",
     "class Dragon:\n",
     "    \n",
@@ -57,6 +67,7 @@
     "    canvas.create_image(300,300, image = bg_photo)\n",
     "    canvas.create_image(knight.x,knight.y, image =knight.photo)\n",
     "    knight.y+=knight.v\n",
+    "    knight.x+=knight.u\n",
     "    current_dragon = 0\n",
     "    dragon_to_kill = -1\n",
     "    for dragon in dragons:\n",
@@ -80,6 +91,8 @@
     "\n",
     "window.bind(\"<Key-Up>\",knight.up)\n",
     "window.bind(\"<Key-Down>\",knight.down)\n",
+    "window.bind(\"<Key-Left>\",knight.left)\n",
+    "window.bind(\"<Key-Right>\",knight.right)\n",
     "window.bind(\"<KeyRelease>\",knight.stop)\n",
     "#\n",
     "game()\n",
