--- a/api.ipynb
+++ b/api.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -32,20 +32,6 @@
      "text": [
       "[{'CR90 corvette': '950'}, {'Star Destroyer': '975'}, {'Sentinel-class landing craft': '1000'}, {'Death Star': '0'}, {'Millennium Falcon': '1050'}]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'CR90 corvette': '950'},\n",
-       " {'Star Destroyer': '975'},\n",
-       " {'Sentinel-class landing craft': '1000'},\n",
-       " {'Death Star': '0'},\n",
-       " {'Millennium Falcon': '1050'}]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -77,17 +63,31 @@
     "                d_list.append({responce.get(\"name\"):responce.get(\"max_atmosphering_speed\")})\n",
     "            else: d_list.append({responce.get(\"name\"):\"0\"})\n",
     "        if  j==5: break\n",
-    "    print(d_list)\n",
     "    return d_list\n",
-    "check_starhips(starships_api)\n"
+    "l =check_starhips(starships_api)\n",
+    "print(l)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Millennium Falcon', '1050']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ms=[0,'0']\n",
+    "for i in l:\n",
+    "    x=list(*i.items())\n",
+    "    if int(x[1])>int(ms[1]): ms=x\n",
+    "print(ms)"
+   ]
   }
  ],
  "metadata": {
