--- a/api.ipynb
+++ b/api.ipynb
@@ -67,27 +67,6 @@
     "l =check_starhips(starships_api)\n",
     "print(l)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Millennium Falcon', '1050']\n"
-     ]
-    }
-   ],
-   "source": [
-    "ms=[0,'0']\n",
-    "for i in l:\n",
-    "    x=list(*i.items())\n",
-    "    if int(x[1])>int(ms[1]): ms=x\n",
-    "print(ms)"
-   ]
   }
  ],
  "metadata": {
@@ -106,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.8.9 (default, Oct 26 2021, 07:25:54) \n[Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
