--- a/api.ipynb
+++ b/api.ipynb
@@ -23,17 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'CR90 corvette': '950'}, {'Star Destroyer': '975'}, {'Sentinel-class landing craft': '1000'}, {'Death Star': '0'}, {'Millennium Falcon': '1050'}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from requests import *\n",
     "from json import *\n",
@@ -65,8 +57,21 @@
     "        if  j==5: break\n",
     "    return d_list\n",
     "l =check_starhips(starships_api)\n",
-    "print(l)"
+    "print(l)\n",
+    "\n",
+    "ms = ['0','0']\n",
+    "for i in l:\n",
+    "    x = list(*i.items())\n",
+    "    if int(x[1]) > int(ms[1]): ms = x\n",
+    "print(ms)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -85,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9 (default, Oct 26 2021, 07:25:54) \n[Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4,
   "vscode": {
