--- a/new.ipynb
+++ b/new.ipynb
@@ -5,7 +5,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "http://www.cbr.ru/scripts/XML_daily.asp?date_req=02/03/2002"
+   ]
   }
  ],
  "metadata": {
