--- a/new.ipynb
+++ b/new.ipynb
@@ -2,19 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "79,5654 рублей за 1 евро\n",
-      "74,2077 рублей за 1 доллар\n",
-      "90,2069 рублей за 1 Фунт стерлингов Соединенного королевства\n",
-      "20,9846 рублей за 100 Венгерских форинтов\n",
-      "57,8753 рублей за 1000 Вон Республики Корея\n"
+      "2023-02-21 21:30:52.604609\n",
+      "79,1330 рублей за 1 евро\n",
+      "74,0432 рублей за 1 доллар\n",
+      "88,8370 рублей за 1 Фунт стерлингов Соединенного королевства\n",
+      "20,6111 рублей за 100 Венгерских форинтов\n",
+      "57,1983 рублей за 1000 Вон Республики Корея\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/pattycha/Library/Python/3.8/lib/python/site-packages/bs4/builder/__init__.py:545: XMLParsedAsHTMLWarning: It looks like you're parsing an XML document using an HTML parser. If this really is an HTML document (maybe it's XHTML?), you can ignore or filter this warning. If it's XML, you should know that using an XML parser will be more reliable. To parse this document as XML, make sure you have the lxml package installed, and pass the keyword argument `features=\"xml\"` into the BeautifulSoup constructor.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'For 100 Доллар США you get 7404.32 Российский рубль'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -26,16 +45,65 @@
     "payload = {\"date_req\":today}\n",
     "url = \"http://www.cbr.ru/scripts/XML_daily.asp\"\n",
     "responce = requests.get(url,params=payload)\n",
+    "\n",
+    "def get_val(ch):\n",
+    "    if ch == \"RUR\": return (\"Российский рубль\",1,1)\n",
+    "    if ch not in responce.text: return False\n",
+    "    a = responce.text.split(ch)[1]\n",
+    "    a = a.split(\"</Valute>\")[0]\n",
+    "    nom = a.split(\"<Nominal>\")[1].split(\"</Nominal>\")[0]\n",
+    "    name = a.split(\"<Name>\")[1].split(\"</Name>\")[0]\n",
+    "    val = a.split(\"<Value>\")[1].split(\"</Value>\")[0]\n",
+    "    val = val.replace(\",\",\".\") \n",
+    "    return (name, int(nom),float(val))\n",
+    "\n",
+    "def course(valute_from, valute_to, amount): \n",
+    "    valute_from = get_val(valute_from)\n",
+    "    valute_to = get_val(valute_to)\n",
+    "    if valute_to!=False and valute_from!=False:\n",
+    "        a = amount* valute_from[2]/valute_from[1]\n",
+    "        b = a*valute_to[1]/valute_to[2]\n",
+    "        return f\"For {amount} {valute_from[0]} you get {b} {valute_to[0]}\"\n",
+    "    else:\n",
+    "        return \"Valute not found\"\n",
+    "\n",
     "xml = bs(responce.content,\"lxml\")\n",
     "def getCourse(id):\n",
     "    return xml.find(\"valute\", {\"id\": id}).value.text\n",
+    "\n",
     "print(getCourse(\"R01239\"), \"рублей за 1 евро\")\n",
     "print(getCourse(\"R01235\"), \"рублей за 1 доллар\")\n",
     "print(getCourse(\"R01035\"), \"рублей за 1 Фунт стерлингов Соединенного королевства\")\n",
     "print(getCourse(\"R01135\"), \"рублей за 100 Венгерских форинтов\")\n",
     "print(getCourse(\"R01815\"), \"рублей за 1000 Вон Республики Корея\")\n",
+    "course(\"USD\",\"RUR\",100)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valute_from = \"EUR\" \n",
+    "valute_to = \"USD\" \n",
+    "amount = int(input(\"Enter the amount to be converted: \")) \n",
+    " \n",
+    "def course(valute_from, valute_to, amount): \n",
+    "    rates = { \n",
+    "        \"RUR\": 1.0, \n",
+    "        \"USD\": 63.0, \n",
+    "        \"EUR\": 75.0 \n",
+    "    } \n",
+    "     \n",
+    "    if valute_from == \"RUR\": \n",
+    "        return amount / rates[valute_to] \n",
+    "    else: \n",
+    "        return amount / rates[valute_from] * rates[valute_to] \n",
+    " \n",
+    "print(\"Converted amount:\", course(valute_from, valute_to, amount))"
    ]
   },
   {
