--- a/new.ipynb
+++ b/new.ipynb
@@ -6,6 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "from pygame import mixer\n",
+    "from gtts import gTTS\n",
+    "import pyaudio\n",
+    "import speech_recognition as sr\n",
     "\n"
    ]
   }
