--- a/new.ipynb
+++ b/new.ipynb
@@ -2,16 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from pygame import mixer\n",
     "from gtts import gTTS\n",
+    "\n",
+    "file_name = \"some.txt\"\n",
+    "file_mp3 = \"my_mp3_file.mp3\"\n",
+    "my_string = \"Всем привет! Привет, мир!\"\n",
+    "\n",
+    "with open(file_name,\"w\") as my_file:\n",
+    "    my_file.write(my_string)\n",
+    "\n",
+    "with open(file_name,\"r\") as my_file:\n",
+    "    my_string = my_file.read()\n",
+    "\n",
+    "mixer.init()\n",
+    "tts = gTTS(text = my_string,lang = \"ru\")\n",
+    "tts.save(file_mp3)\n",
+    "\n",
     "import pyaudio\n",
     "import speech_recognition as sr\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: speechrecognition in /Users/pattycha/Library/Python/3.8/lib/python/site-packages (3.9.0)\n",
+      "Requirement already satisfied: requests>=2.26.0 in /Users/pattycha/Library/Python/3.8/lib/python/site-packages (from speechrecognition) (2.28.1)\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in /Users/pattycha/Library/Python/3.8/lib/python/site-packages (from requests>=2.26.0->speechrecognition) (2.1.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/pattycha/Library/Python/3.8/lib/python/site-packages (from requests>=2.26.0->speechrecognition) (3.3)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/pattycha/Library/Python/3.8/lib/python/site-packages (from requests>=2.26.0->speechrecognition) (1.26.12)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/pattycha/Library/Python/3.8/lib/python/site-packages (from requests>=2.26.0->speechrecognition) (2022.6.15)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.0.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49m/Applications/Xcode.app/Contents/Developer/usr/bin/python3 -m pip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install speechrecognition"
    ]
   }
  ],
