--- a/new.ipynb
+++ b/new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,12 @@
     "mixer.init()\n",
     "tts = gTTS(text = my_string,lang = \"ru\")\n",
     "tts.save(file_mp3)\n",
+    "\n",
+    "mixer.music.load(file_mp3)\n",
+    "mixer.music.play()\n",
+    "\n",
+    "os.remove(file_mp3)\n",
+    "os.remove(file_name)\n",
     "\n",
     "import pyaudio\n",
     "import speech_recognition as sr\n",
