--- a/new.ipynb
+++ b/new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +32,16 @@
     "\n",
     "import pyaudio\n",
     "import speech_recognition as sr\n",
+    "\n",
+    "r = sr.Recognizer()\n",
+    "while True:\n",
+    "    with sr.Microphone(device_index=1) as source:\n",
+    "        print(\"Say smthng\")\n",
+    "        audio = r.listen(source)\n",
+    "    speech = r.recognize_google(audio,language=\"ru_RU\").lower()\n",
+    "    print(f\"You say:{speech}\")\n",
+    "    if speech == \"привет\":\n",
+    "        print(\"привет\")\n",
     "\n"
    ]
   },
