--- a/new.ipynb
+++ b/new.ipynb
@@ -20,20 +20,24 @@
     "with open(file_name,\"r\") as my_file:\n",
     "    my_string = my_file.read()\n",
     "\n",
-    "mixer.init()\n",
-    "tts = gTTS(text = my_string,lang = \"ru\")\n",
-    "tts.save(file_mp3)\n",
+    "# tts = gTTS(text = my_string,lang = \"ru\")\n",
+    "# tts.save(file_mp3)\n",
     "\n",
+    "\n",
+    "mixer.init()\n",
     "mixer.music.load(file_mp3)\n",
     "mixer.music.play()\n",
     "\n",
-    "os.remove(file_mp3)\n",
-    "os.remove(file_name)\n",
+    "# os.remove(file_mp3)\n",
+    "# os.remove(file_name)\n",
     "\n",
     "import pyaudio\n",
     "import speech_recognition as sr\n",
+    "from random import choice as chs\n",
     "\n",
     "r = sr.Recognizer()\n",
+    "hello_list = [\"hello\",\"привет\",\"Как дела?\"]\n",
+    "film_list = [\"Mib\",\"Аватар\",\"Мстители\",\"Чебурашка\",\"Гарри Поттер\",\"заклятие\",\"ерминатор\",\"Iron man\",\"Шерлок холмс\"]\n",
     "while True:\n",
     "    with sr.Microphone(device_index=1) as source:\n",
     "        print(\"Say smthng\")\n",
@@ -41,8 +45,67 @@
     "    speech = r.recognize_google(audio,language=\"ru_RU\").lower()\n",
     "    print(f\"You say:{speech}\")\n",
     "    if speech == \"привет\":\n",
-    "        print(\"привет\")\n",
+    "        print(chs(hello_list))\n",
+    "    if speech == \"фильм\":\n",
+    "        print(chs(film_list))\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pygame import mixer,time\n",
+    "from gtts import gTTS\n",
+    "import speech_recognition as sr\n",
+    "import random\n",
+    "\n",
+    "r = sr.Recognizer()\n",
+    "with sr.Microphone(device_index=1) as sorce:\n",
+    "    print(\"listening\")\n",
+    "    audio = r.listen(sorce)\n",
+    "\n",
+    "spech = r.recognize_google(audio, language=\"ru-RU\").lower()\n",
+    "print(\"Вы сказали:\",spech)\n",
+    "\n",
+    "hello = [\"привет\",\"приветствую\",\"ку\",\"здарова\",\"рад вас видеть\", \"приветик\"]\n",
+    "\n",
+    "\n",
+    "file_my = open(\"chgk\\my_file.txt\", \"w\",encoding=\"utf\")\n",
+    "file_my.write(spech)\n",
+    "\n",
+    "rand_hello = random.choice(hello)\n",
+    "\n",
+    "if spech == \"привет\":\n",
+    "    mixer.init()\n",
+    "    tts = gTTS(text= rand_hello,lang=\"ru\")\n",
+    "    tts.save(\"chgk\\\\aud.mp3\")\n",
+    "    mixer.music.load(\"chgk\\\\aud.mp3\")\n",
+    "    mixer.music.set_volume(0.5)\n",
+    "    mixer.music.play()\n",
+    "    print(\"Бот: \", rand_hello)\n",
+    "    time.wait(10000)\n",
+    "    \n",
+    "file_my.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['iMac Microphone', 'iMac Speakers']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sr.Microphone.list_microphone_names())"
    ]
   },
   {
@@ -89,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.8.9 (default, Oct 26 2021, 07:25:54) \n[Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
