--- a/valute.ipynb
+++ b/valute.ipynb
@@ -11,9 +11,9 @@
     "from bs4 import BeautifulSoup as bs\n",
     "from datetime import datetime\n",
     "\n",
-    "def new_win():\n",
-    "    tl = Toplevel(root)\n",
-    "    tl['bg'] = \"black\"\n",
+    "# def new_win():\n",
+    "#     tl = Toplevel(root)\n",
+    "#     tl['bg'] = \"black\"\n",
     "colorbg = \"#afb55b\"\n",
     "root = Tk()\n",
     "root.title(\"Valute course\")\n",
@@ -46,8 +46,8 @@
     "course_uan = Label(root, text = f\"¥{getCourse('R01375')}\",bg= \"blue\",fg = \"magenta\")\n",
     "course_uan.place(x=100,y=270)\n",
     "\n",
-    "button = Button(root, text = 'press me plz', command = new_win)\n",
-    "button.place(x=100, y = 320)\n",
+    "# button = Button(root, text = 'press me plz', command = new_win)\n",
+    "# button.place(x=100, y = 320)\n",
     "\n",
     "\n",
     "\n",
