--- a/new.ipynb
+++ b/new.ipynb
@@ -2,23 +2,95 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n"
+      "3\n",
+      "(5, 6, 7, 8, 9, 0, 12, 3, 5, 6, 10)\n",
+      "{'d': 16, 'ff': 'hello', 'name': 'Mihail'}\n",
+      "74\n"
      ]
     }
    ],
    "source": [
-    "def addiction(a, b = 0, c = 0, *args):\n",
-    "    return a + b + c\n",
+    "def addiction(a, *args, **kwargs):\n",
+    "    print(a)\n",
+    "    print(args)\n",
+    "    print(kwargs)\n",
+    "    s = a + sum(args)\n",
+    "    return s\n",
     "\n",
-    "c = addiction(3,  c = 4)\n",
+    "c = addiction(3,5,6,7,8,9,0,12,3,5,6,10,d=16,ff = \"hello\",name = \"Mihail\")\n",
     "print(c)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 4, 16, 36, 64, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = []\n",
+    "for i in range(0,11):\n",
+    "    if i**2%2==0:l.append(i**2)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 4, 16, 36, 64, 100]\n",
+      "{3: 9, 5: 25, 7: 49, 9: 81}\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [i**2 for i in range(0,11) if i**2%2==0]\n",
+    "d = {i:i**2 for i in range(0,11) if i%2==1 and i>2}\n",
+    "print(l)\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expected 'else' after 'if' expression (3407559598.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[27], line 6\u001b[0;36m\u001b[0m\n\u001b[0;31m    is_allow = [True if age>= 18]\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected 'else' after 'if' expression\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 99\n",
+    "# if age >= 18:\n",
+    "#     is_allow = True\n",
+    "# else:\n",
+    "#     is_allow = False\n",
+    "is_allow = [True if age>= 18]\n",
+    "print(is_allow)"
    ]
   }
  ],
