--- a/hw.ipynb
+++ b/hw.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: 'e'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m numbers \u001b[39m=\u001b[39m [\u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mEnter number:\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m)]\n\u001b[0;32m----> 2\u001b[0m numbers \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39;49m(\u001b[39mmap\u001b[39;49m(\u001b[39mint\u001b[39;49m, numbers))\n\u001b[1;32m      3\u001b[0m even_numbers \u001b[39m=\u001b[39m [i \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m numbers \u001b[39mif\u001b[39;00m i\u001b[39m%\u001b[39m\u001b[39m2\u001b[39m\u001b[39m==\u001b[39m\u001b[39m0\u001b[39m]\n\u001b[1;32m      4\u001b[0m odd_numbers \u001b[39m=\u001b[39m [i \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m numbers \u001b[39mif\u001b[39;00m i \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m even_numbers]\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'e'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "numbers = [input(\"Enter number:\") for i in range(10)]\n",
     "numbers = list(map(int, numbers))\n",
@@ -24,6 +12,18 @@
     "odd_numbers = [i for i in numbers if i not in even_numbers]\n",
     "print(\"Четные числа:\", even_numbers)\n",
     "print(\"Нечетные числа:\", odd_numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = (5, 3, 2, 1, 4)\n",
+    "b = tuple(sorted(a))\n",
+    "print(b)\n",
+    "print(type(b))"
    ]
   }
  ],
