--- a/new.ipynb
+++ b/new.ipynb
@@ -71,15 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "expected 'else' after 'if' expression (3407559598.py, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[27], line 6\u001b[0;36m\u001b[0m\n\u001b[0;31m    is_allow = [True if age>= 18]\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected 'else' after 'if' expression\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
      ]
     }
    ],
@@ -89,8 +88,73 @@
     "#     is_allow = True\n",
     "# else:\n",
     "#     is_allow = False\n",
-    "is_allow = [True if age>= 18]\n",
+    "is_allow = age >= 18\n",
     "print(is_allow)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "val = None\n",
+    "# if val is None:\n",
+    "#     res = []\n",
+    "# else:\n",
+    "#     res = val\n",
+    "res = [] if val is None else val\n",
+    "print(res)\n",
+    "res = val or []\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = tuple([1,2,3])\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5)\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = (5, 3, 2, 1, 4)\n",
+    "b = tuple(sorted(a))\n",
+    "print(b)\n",
+    "print(type(b))"
    ]
   }
  ],
