--- a/new.ipynb
+++ b/new.ipynb
@@ -156,6 +156,112 @@
     "print(b)\n",
     "print(type(b))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(5, 'a', 'a'), (3, 'b', 's'), (2, 'c', 'd'), (1, 'd', 'f'), (4, 'f', 'd')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = tuple((5, 3, 2, 1, 4, 5, 6, 7, 8))\n",
+    "b = ['a','b','c','d','f']\n",
+    "d = \"asdfdfdsadass\"\n",
+    "c = list(zip(a,b,d))\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sqrt(z,x):\n",
+    "    x=z(x)\n",
+    "    x=x**2\n",
+    "    return x \n",
+    "\n",
+    "def dec(x):\n",
+    "    return x-1\n",
+    "\n",
+    "incr = lambda x: x+1\n",
+    "\n",
+    "print(sqrt(dec,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = list(map(lambda x:x**2,[1,2,3,4]))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import reduce\n",
+    "items = [1,2,3,4,5]\n",
+    "s = lambda x,y:x+y\n",
+    "sum_all=reduce(s,items)\n",
+    "print(sum_all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['мак', 'мак', 'мак', 'мак', 'мак']\n"
+     ]
+    }
+   ],
+   "source": [
+    "mixed = ['мак', 'просо', 'мак', 'мак', 'просо', 'мак', 'просо', 'просо','просо', 'мак']\n",
+    "zolushka = list(filter(lambda x:x==\"мак\",mixed))\n",
+    "print(zolushka)"
+   ]
   }
  ],
  "metadata": {
