--- a/new.ipynb
+++ b/new.ipynb
@@ -225,21 +225,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15\n"
+      "24\n"
      ]
     }
    ],
    "source": [
     "from functools import reduce\n",
-    "items = [1,2,3,4,5]\n",
-    "s = lambda x,y:x+y\n",
+    "items = [1,2,3,3,24,5]\n",
+    "s = lambda x,y:x if x>=y else y\n",
     "sum_all=reduce(s,items)\n",
     "print(sum_all)"
    ]
