--- a/bot.ipynb
+++ b/bot.ipynb
@@ -73,6 +73,33 @@
     "\n",
     "bot.polling()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = input()\n",
+    "\n",
+    "\n",
+    "def chislo(s):\n",
+    "    queue = []\n",
+    "    k = 0\n",
+    "    for i in range(len(s)):\n",
+    "        queue.append(s[i])\n",
+    "    while queue != sorted(queue):\n",
+    "        k += 2\n",
+    "        del f[''.join(queue).rindex('B')]\n",
+    "        del f[''.join(queue).index('W')]\n",
+    "    if k == len(s):\n",
+    "        return f'{k}\\nНИКОГО НЕ ОСТАЛОСЬ'\n",
+    "    new_queue = ''.join(queue)\n",
+    "    return f'{k}\\n{new_queue}'\n",
+    "BWBWBBBBWWW\n",
+    "\n",
+    "print(chislo(s))"
+   ]
   }
  ],
  "metadata": {
@@ -91,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.8.9 (default, Oct 26 2021, 07:25:54) \n[Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
